spec/QSON.ebnf
qson            = value ;

value           = object | array | string | number | boolean | null ;

object          = "(" [ member { "," member } ] ")" ;

member          = key ":" value ;

key             = { key-char } ;

key-char        = text-char | "$" ;

array           = "@(" [ value { "," value } ] ")" ;

string          = "$" { string-char } "$" ;

string-char     = text-char | "(" | ")" | ":" | "," ;

number          = [ "-" ] int [ frac ] [ exp ] ;

int             = digit { digit } ;

frac            = "." digit { digit } ;

exp             = "e" [ "-" ] digit { digit } ;

boolean         = "true" | "false" ;

null            = "null" ;

text-char       = letter | digit | symbol-char | percent-encoded;

letter          = "A".."Z" | "a".."z" ;

digit           = "0".."9" ;

symbol-char     = "!" | "*" | "-" | "." | ";" | "@" | "_" | "~" ;

percent-encoded = "%" hex-digit hex-digit ;

hex-digit       = "0".."9" | "A".."F" ;
